@@ -1,6 +1,11 @@
 2008-02-04  Alexander Larsson  <alexl@redhat.com>
 
         * daemon/gvfsbackendsftp.c:
+	Make name of sftp root be "/ on <host>" (#511515)
+
+2008-02-04  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
         * daemon/gvfsdaemonutils.c:
         * hal/ghalvolume.c:
 	Cleanup i18n strings (#510192)
